# hydra-image-processor

./: .condaignore  .gitattributes  .gitignore  .gitversion.yml  0.10  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  GEMINI.md  LICENSE  LICENSE.md  ROADMAP.md  SECURITY.md  TESTING.md  build_docs.bat  build_docs.sh  check_dll_deps.ps1  ci-readme.md  environment.yml  logo.ai  pyproject.toml  readme.md  tdrDelay.reg  tdrDelay_LONG.reg  tdrDelay_standard.reg
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  conda-build.yml  hydra-ci.yml  matlab-multibuild.yml  release.yml  windows-cuda-build.yml
Testing/Images/: rng_states.mat  test_image_1d_noise.mat  test_image_1d_rect.mat  test_image_1d_sum.mat  test_image_2d_noise.mat  test_image_2d_rect.mat  test_image_2d_sum.mat  test_image_3d_noise.mat  test_image_3d_rect.mat  test_image_3d_sum.mat  test_image_4d_noise.mat  test_image_4d_rect.mat  test_image_4d_sum.mat  test_image_5d_noise.mat  test_image_5d_rect.mat  test_image_5d_sum.mat
build-linux/: build.md
build-win32/: build.bat  build.md
cmake/: hydra-config.cmake.in
docs/: .gitkeep  README.md  index.html
include/: CWrappers.cuh  VecFuncs.h
lib/: CudaImageProcessor.lib  CudaImageProcessor_d.lib
ports/hydra/: portfile.cmake  vcpkg.json
recipe/: bld.bat  build.sh  meta.yaml
scripts/: update-vcpkg-files.py
src/MATLAB/: BuildMexObject.m  BuildScript.m  CudaMexTester.asv  CudaMexTester.m  CudaMex_d.mexw64  HydraImageProcessor.prj  grayscale.tif  sandbox.m  sandbox2.m  showIm.m  template.m  testChunking.m  tiffReader.m  tiffWriter.m  timeMatlabVsCuda.m
src/MATLAB/+Cuda/: CudaMex.mexw64  GrowKernelAnimate.m  MakeBallMask.m  (+1 more)
src/Python/: HIP.py  HIP.pyd  Hydra.py  MANIFEST.in  README.md  download-script.py  environment.yml  envrioment.yml  example_usage.py  pyproject.toml  test-hydra.py  test_import.py  test_nonchunk.py  test_nonchunking.py  test_package.py
src/Python/Test/: __init__.py  captureSnapshot.py  test_accuracy.py
src/Python/hydra_image_processor/: README.md  __init__.py  core.py
src/Python/hydra_image_processor/cuda/: __init__.py  core.py
src/Python/hydra_image_processor/local/: __init__.py  core.py
src/Python/hydra_image_processor/utils/: __init__.py  masks.py
src/c/: CudaImageBuffer.cu  CudaImageBuffer.h  CudaImageProccessing.sln  CudaImageProccessing.vcxproj  CudaImageProccessing.vcxproj.filters  CudaImageProcessor.vcxproj  CudaImageProcessor.vcxproj.filters  CudaImageProcessor_dll.vcxproj  CudaImageProcessor_dll.vcxproj.filters  CudaImageProcessor_lib.vcxproj  CudaImageProcessor_lib.vcxproj.filters  CudaLibTester.vcxproj  CudaMex.cpp  CudaMex.vcxproj  CudaMex.vcxproj.eric.nvuser  CudaMex.vcxproj.filters  CudaMex_old.vcxproj  CudaMex_old.vcxproj.filters  CudaPy3DLL.vcxproj  CudaPy3DLL.vcxproj.filters  CudaResize.cuh  CudaVersionImport.props  CudaWrapper.cu  Mex.mexa64  Mex.mexw64  MexMorphologicalClosure.cpp  MexResize.cpp  Version.h.in  left2right.tif  main.cu  makefile  tdrTimeout.reg  top2bottom.tif
src/c/Cuda/: BufferConversions.h  CHelpers.cpp  CHelpers.h  CMakeLists.txt  CWrapperAutogen.cu  CWrapperAutogen.h  CWrappers.cu  CWrappers.cuh  CWrappers.h  CommandLineProgress.h  CudaAdd.cuh  CudaAddTwoImages.cuh  CudaClamp.cuh  CudaClosure.cuh  CudaContrastEnhancement.cuh  CudaConvertType.cuh  CudaDeviceCount.cuh  CudaDeviceImages.cuh  CudaDeviceInfo.cpp  CudaDeviceInfo.h  CudaDeviceStats.cpp  CudaDeviceStats.h  CudaElementWiseDifference.cuh  CudaEntropyFilter.cuh  CudaGaussian.cuh  CudaGaussianFilter.cuh  CudaGetMinMax.cuh  CudaGetROI.cuh  CudaHighPassFilter.cuh  CudaHistogram.cuh  CudaIdentityFilter.cuh  CudaImageContainer.cuh  CudaImageContainerClean.cuh  CudaImageCopy.cuh  CudaImageReduction.cuh  CudaIntensityProjection.cuh  CudaLinearUnmixing.cuh  CudaLoG.cuh  CudaMarkovRandomFieldDenoiser.cuh  CudaMask.cuh  (+52 more)
src/c/Mex/: CMakeLists.txt  CommandList.h  CudaMex.cpp  CudaMex.def  HydraMex.def  MedianFilter.cpp  MexAddConstant.cpp  MexAddImageWith.cpp  MexApplyPolyTransformation.cpp  MexArgConverter.h  MexClosure.cpp  MexCommand.cpp  MexCommand.h  MexCommandModule.cpp  MexContrastEnhancement.cpp  MexDeviceCount.cpp  MexDeviceStats.cpp  MexElementWiseDifference.cpp  MexEntropyFilter.cpp  MexGaussian.cpp  MexGaussianFilter.cpp  MexGetMinMax.cpp  MexHighPassFilter.cpp  MexHistogram.cpp  MexIdentityFilter.cpp  MexImagePow.cpp  MexIncludes.h  MexKernel.cpp  MexKernel.h  MexLinearUnmixing.cpp  MexLoG.cpp  MexMarkovRandomFieldDenoiser.cpp  MexMaxFilter.cpp  MexMaxFilterEllipsoid.cpp  MexMaxFilterKernel.cpp  MexMaxFilterNeighborhood.cpp  MexMeanFilter.cpp  MexMedianFilter.cpp  MexMinFilter.cpp  MexMinFilterEllipsoid.cpp  (+33 more)
src/c/Python/: CMakeLists.txt  HydraPyModule.cpp  PyArgConverter.h  PyCommandModule.cpp  PyIncludes.h  PyKernel.cpp  PyKernel.h  PyTypes.h  PyWrapClosure.cpp  PyWrapCommand.cpp  PyWrapCommand.h  PyWrapDef.h  PyWrapDeviceCount.cpp  PyWrapDeviceStats.cpp  PyWrapElementWiseDifference.cpp  PyWrapEntropyFilter.cpp  PyWrapGaussian.cpp  PyWrapGetMinMax.cpp  PyWrapHighPassFilter.cpp  PyWrapIdentityFilter.cpp  PyWrapLoG.cpp  PyWrapMaxFilter.cpp  PyWrapMeanFilter.cpp  PyWrapMedianFilter.cpp  PyWrapMinFilter.cpp  PyWrapMinMax.cpp  PyWrapMultiplySum.cpp  PyWrapOpener.cpp  PyWrapStdFilter.cpp  PyWrapSum.cpp  PyWrapVarFilter.cpp  PyWrapWienerFilter.cpp  hip_module.cpp
test_data/: Closure_c1_5-5-2.tif  Closure_c2_5-5-2.tif  ElementWiseDifference_c1_reverse.tif  ElementWiseDifference_c2_reverse.tif  EntropyFilter_c1_5-5-2.tif  EntropyFilter_c2_5-5-2.tif  Gaussian_c1_19-19-9.tif  Gaussian_c2_19-19-9.tif  HighPassFilter_c1_19-19-9.tif  HighPassFilter_c2_19-19-9.tif  LoG_c1_4-4-2.tif  LoG_c2_4-4-2.tif  MaxFilter_c1_5-5-2.tif  MaxFilter_c2_5-5-2.tif  MeanFilter_c1_5-5-2.tif  MeanFilter_c2_5-5-2.tif  MedianFilter_c1_5-5-2.tif  MedianFilter_c2_5-5-2.tif  MinFilter_c1_5-5-2.tif  MinFilter_c2_5-5-2.tif  Opener_c1_5-5-2.tif  Opener_c2_5-5-2.tif  StdFilter_c1_5-5-2.tif  StdFilter_c2_5-5-2.tif  VarFilter_c1_5-5-2.tif  VarFilter_c2_5-5-2.tif  test_c1_.tif  test_c2_.tif
(+598 files in other folders)
