[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydra-image-processor"
version = "0.1.0"
description = "A high-performance image processing library with Python bindings."
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
authors = [
    {name = "Eric Wait", email = "info@ericwait.com"}
]
keywords = ["image processing", "python bindings", "high performance", "C++", "CUDA"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["hydra_image_processor*"]
exclude = ["Test*"]
